--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="Items">
+<main>
     <h1>Simple Data Structure</h1>
     {% if submitted_add_items|length < 1 %}
     <h4>There is no item. Please add one on below</h4>
@@ -17,83 +17,100 @@
         <tr>
             <th>Item</th>
             <th>Data Structure</th>
-            <th>Creation Time</th>
             <th>Actions</th>
+            <th>Creation Time</th>
         </tr>
 
         {% for submitted_add_item in submitted_add_items %}
         <tr>
-            <td class="inputValues">
-                {% for input_value in submitted_add_item.item.split() %} 
-                <div class="inputValue">{{ input_value }}</div>
-                {% endfor %}
+            <td >
+                <div class="inputValues">
+                    {% for input_value in submitted_add_item.item.split()[:10] %} 
+                    <div class="inputValue">{{ input_value }}</div>
+                    {% endfor %}
+                </div>
+                <div class="inputValues">
+                    {% for input_value in submitted_add_item.item.split()[10:] %} 
+                    <div class="inputValue">{{ input_value }}</div>
+                    {% endfor %}
+                </div>
             </td>
             <td>{{ submitted_add_item.data_structure }}</td> 
-            <td>{{ submitted_add_item.date_created.date() }}</td> 
             <td>
-                <a href="/update/{{ submitted_add_item.id }}">Update</a>
-                <br>
-                <a href="/delete/{{ submitted_add_item.id }}">Delete</a>
+                <a href="/update/{{ submitted_add_item.id }}" class="button_update">Update</a>
+                <a href="/delete/{{ submitted_add_item.id }}" style="background-color:red; color: white;">Delete</a>
             </td>
+            <td>{{ submitted_add_item.date_created.strftime('%H:%M:%S') }}</td> 
         </tr>
 
         <tr>
-            <td>
-                {% if submitted_add_item.data_structure == "Python list" %}
-                <form action="/sort/{{ submitted_add_item.id }}" method="POST">
+            {% if submitted_add_item.data_structure == "Python list" %}
+            <form action="/sort/{{ submitted_add_item.id }}" method="POST">
+                <td>
                     <label for="sortItem">Please choose a sort method</label>
-                        <select name="sortItem">
-                            <option value="Random" >(Random)</option>
-                            <option value="Bubble Sort">Bubble Sort</option>
-                            <option value="Insertion Sort">Insertion Sort</option>
-                        </select>
-                        <button id="sortButton" value="sortItem">sort</button>
-                </form>
-                {% endif %}
-                {% if submitted_add_item.sort_time > 0  %}
-                <p>Sort time is {{ submitted_add_item.sort_time }}</p>
-                {% endif %}
-
-                <form action="/search/{{ submitted_add_item.id }}" method="POST">
+                </td>
+                <td>
+                    <select name="sortItem">
+                        <option value="Bubble Sort">Bubble Sort</option>
+                        <option value="Insertion Sort">Insertion Sort</option>
+                    </select>
+                </td>
+                <td>
+                    <button id="sortButton" value="sortItem">Sort</button>
+                </td>
+                <td class="td_center">
+                    {% if submitted_add_item.sort_time > 0  %}
+                    <output><mark>{{ submitted_add_item.sort_time }}</mark></output>
+                    {% endif %}
+                </td>
+            </form>
+            {% endif %}
+        </tr>
+        <tr>
+            <form action="/search/{{ submitted_add_item.id }}" method="POST">
+                <td>
                     <label for="searchItem">Please choose a search item</label>
-                        <select name="searchItem">
-                            {% for i in range(10) %}
-                            <option value="{{ i }}">{{ i+1 }}</option>    
-                            {% endfor %}
-                        </select>
-                        <button id="searchButton" value="searchItem">search</button>
-                </form>
-                {% if submitted_add_item.search_time > 0  %}
-                <p>Search time is {{ submitted_add_item.search_time }}</p>
-                {% endif %}
-            </td>
+                </td>
+                <td>
+                    <select name="searchItem">
+                        {% for i in range(submitted_add_item.item.split() | length) %}
+                        <option value="{{ i }}">{{ i+1 }}</option>    
+                        {% endfor %}
+                    </select>
+                </td>
+                <td>
+                    <button id="searchButton" value="searchItem">Search</button> 
+                </td>
+                <td class="td_center">
+                    {% if submitted_add_item.search_time > 0  %}
+                    <output><mark>{{ submitted_add_item.search_time }}</mark></output>
+                    {% endif %}
+                </td>
+            </form>
         </tr>
         {% endfor %}
     </table>
     {% endif %}
 
     <form action="/" method="POST">
-        <div>
+        <legend hidden>Number</legend>
+        <fieldset>
             <label for="data_structure">Please choose a data structure</label>
-            <select name="data_structure">
-                <option value="Random" >(Random)</option>
-                <option value="Python list">Python list</option>
-                <option value="Linked list">Linked list</option>
-                <option value="Binary Search Tree">Binary Search Tree</option>
-            </select><br>
-        </div>
-        <div>
-            <p>Please choose either auto-generated or customer generated list of size 10</p>
-            <input type="radio" name="data" id ="data1" value="auto" required>
-            <label for="data1">Auto-generation</label>
-            <input type="radio" name="data" id ="data2" >
-            <label for="data2">Custom-generation 
-                <input type="text" name="item" id="item" placeholder="1 2 3" pattern="^(\s)*(\d+\s+){9}\d+(\s)*$">
+                <input type="checkbox" name="Python list" value="Python list"><label for="data1">Python list</label>
+                <input type="checkbox" name="Linked list" value="Linked list"><label for="data1">Linked list</label>
+                <input type="checkbox" name="Binary Search Tree" value="Binary Search Tree"><label for="data1">Binary Search Tree</label>
+        </fieldset>
+        <fieldset>
+            <label for="generate">Please choose a list of size =1-20, values = -999 to 999</label>
+            <input type="radio" name="generate" id ="data1" value="auto" checked required><label for="data1">Auto-generation</label>
+            <input type="radio" name="generate" id ="data2" >
+            <label for="custom">Custom-generation 
+                <input type="text" name="custom" id="item" pattern="^(\s)*(-?\d{1,3}\s+){9,20}-?\d{1,3}(\s)*$" value="1 2 3 4 5 6 7 8 9 10"></textarea>
             </label><br>
-        </div>
+        </fieldset>
 
-        <button id="submitButton" value="AddItem">submit</button>
+        <button id="submitButton" value="AddItem">Create</button>
     </form>
 
-</div>
+</main>
 {% endblock %}
