--- a/templates/update.html
+++ b/templates/update.html
@@ -5,44 +5,39 @@
 {% endblock %}
 
 {% block body %}
-<div class="Items">
-    <h1>Update item</h1>
+<main>
+    <h1>Please amend value(s) in item boxes directly</h1>
     <table>
         <tr>
             <th>Item</th>
             <th>Data Structure</th>
+            <th>Actions</th>
             <th>Creation Time</th>
         </tr>
         <tr>
-
-
-            <td class="inputValues">
-                {% for input_value in update_item.item.split() %} 
-                <div class="inputValue">
-                    {{ input_value }}
-                </div>
-                {% endfor %}
-            </td>
-            <td>{{ update_item.data_structure }}</td>
-            <td>{{ update_item.date_created.date() }}</td>
+            <form action="/update/{{ update_item.id }}" method="POST">
+                <td>
+                    <div class="inputValues">
+                        {% for i in range(10) %} 
+                        <input type="text" name="{{ i }}" pattern="^(\s)*\d{1,3}(\s)*$" value="{{ update_item.item.split()[i] }}" class="inputValue">
+                        {% endfor %}
+                    </div>
+                    <div class="inputValues">
+                        {% for i in range(10, update_item.item.split()|length) %} 
+                        <input type="text" name="{{ i }}" pattern="^(\s)*\d{1,3}(\s)*$" value="{{ update_item.item.split()[i] }}" class="inputValue">
+                        {% endfor %}
+                    </div>
+                </td>
+                <td>{{ update_item.data_structure }}</td>
+                <td><button class="button_update" value="Update">Update</button></td>
+                <td>{{ update_item.date_created.strftime('%H:%M:%S') }}</td>
+            </form>
         </tr>
     </table>
-    <div class="updateSubmitBack">
-        <form action="/update/{{ update_item.id }}" method="POST">
-            <label for="updateItemIndex">Please choose a update item</label>
-            <select name="updateItemIndex">
-                {% for i in range(update_item.item.split() | length) %}
-                <option value="{{ i }}">{{ i+1 }}</option>    
-                {% endfor %}
-            </select>
-            <input type="text" name="update_item_value" id="update_item_value" pattern="^(\s)*\d{1,3}(\s)*$" style="width:40px">
-            <button value="Update">update</button>
-        </form>
-        <form action="/" method="GET">
-            <button value="back" >back</button>
+    <div class="updateBack">
+        <form action="/" method="GET" >
+            <button value="back">Go Back</button>
         </form>
     </div>
-
-    
-</div>
+</main>
 {% endblock %}
